examples/09 - Filters/bin/windows/obj/include/starling/errors/NotSupportedError.h
// Generated by Haxe 3.4.4
#ifndef INCLUDED_starling_errors_NotSupportedError
#define INCLUDED_starling_errors_NotSupportedError

#ifndef HXCPP_H
#include <hxcpp.h>
#endif

#ifndef INCLUDED_openfl_errors_Error
#include <openfl/errors/Error.h>
#endif
HX_DECLARE_CLASS2(openfl,errors,Error)
HX_DECLARE_CLASS2(starling,errors,NotSupportedError)

namespace starling{
namespace errors{


class HXCPP_CLASS_ATTRIBUTES NotSupportedError_obj : public  ::openfl::errors::Error_obj
{
	public:
		typedef  ::openfl::errors::Error_obj super;
		typedef NotSupportedError_obj OBJ_;
		NotSupportedError_obj();

	public:
		enum { _hx_ClassId = 0x0f68dcfa };

		void __construct(::String __o_message,hx::Null< int >  __o_id);
		inline void *operator new(size_t inSize, bool inContainer=true,const char *inName="starling.errors.NotSupportedError")
			{ return hx::Object::operator new(inSize,inContainer,inName); }
		inline void *operator new(size_t inSize, int extra)
			{ return hx::Object::operator new(inSize+extra,true,"starling.errors.NotSupportedError"); }
		static hx::ObjectPtr< NotSupportedError_obj > __new(::String __o_message,hx::Null< int >  __o_id);
		static hx::ObjectPtr< NotSupportedError_obj > __alloc(hx::Ctx *_hx_ctx,::String __o_message,hx::Null< int >  __o_id);
		static void * _hx_vtable;
		static Dynamic __CreateEmpty();
		static Dynamic __Create(hx::DynamicArray inArgs);
		//~NotSupportedError_obj();

		HX_DO_RTTI_ALL;
		static void __register();
		bool _hx_isInstanceOf(int inClassId);
		::String __ToString() const { return HX_HCSTRING("NotSupportedError","\x0d","\x17","\x10","\x8f"); }

};

} // end namespace starling
} // end namespace errors

#endif /* INCLUDED_starling_errors_NotSupportedError */ 
